--- a/src/styles.scss
+++ b/src/styles.scss
@@ -140,3 +140,11 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
+
+.modal-card-foot {
+  justify-content: space-between;
+}
+
+textarea {
+  min-height: 100px;
+}
