--- a/src/app/pages/admin/admin-places/admin-places.component.html
+++ b/src/app/pages/admin/admin-places/admin-places.component.html
@@ -85,11 +85,7 @@
             <label for="state">Estado</label>
             <div class="control">
               <div class="select">
-                <select (change)="getCities()"
-                  [(ngModel)]="filter.state"
-                  class="input"
-                  name="state"
-                  id="state">
+                <select (change)="getCities()" [(ngModel)]="filter.state" class="input" name="state" id="state">
                   <option value="">Selecione...</option>
                   <option value="AC">Acre</option>
                   <option value="AL">Alagoas</option>
@@ -127,12 +123,8 @@
         <div class="column is-3">
           <div class="field">
             <label for="city">Cidade</label>
-            <ng-select class="custom" [items]="cities | async"
-              [virtualScroll]="true"
-              bindLabel="nome"
-              bindValue="nome"
-              id="city"
-              [(ngModel)]="filter.city">
+            <ng-select class="custom" [items]="cities | async" [virtualScroll]="true" bindLabel="nome" bindValue="nome"
+              id="city" [(ngModel)]="filter.city">
             </ng-select>
           </div>
         </div>
@@ -153,7 +145,8 @@
       <div class="columns is-multiline">
         <div class="column is-4" *ngFor="let place of places; let index = index">
           <div class="card place-card">
-            <div class="card-image has-background-primary" [style]="{ 'background-image': place.pictureUrl ? 'url(' + place.pictureUrl + ')' : '' }"></div>
+            <div class="card-image has-background-primary"
+              [style]="{ 'background-image': place.pictureUrl ? 'url(' + place.pictureUrl + ')' : '' }"></div>
             <div class="card-content">
               <h3 class="title is-4">{{ place.title }}</h3>
               <p class="subtitle is-6 mb-0">{{ place.type }}</p>
@@ -207,7 +200,8 @@
                 {{ place.address.city }}, {{ place.address.state }}<br>
                 Bairro {{ place.address.neighborhood }}<br>
                 Descrição: {{place.address.descricao}} <br>
-                {{ place.address.street }} {{ place.address.number }}{{ place.address.complement ? ', ' + place.address.complement : '' }}
+                {{ place.address.street }} {{ place.address.number }}{{ place.address.complement ? ', ' +
+                place.address.complement : '' }}
               </address>
             </div>
             <footer class="card-footer">
@@ -219,7 +213,8 @@
                   <b>Ver</b>
                 </span> -->
               </a>
-              <a *ngIf="place.status === 'pending'" (click)="approvePlace(place.id, index)" class="card-footer-item has-text-success-dark">
+              <a *ngIf="place.status === 'pending'" (click)="approvePlace(place.id, index)"
+                class="card-footer-item has-text-success-dark">
                 <span class="icon">
                   <i class="fas fa-thumbs-up"></i>
                 </span>
@@ -227,28 +222,29 @@
                   <b>Aprovar</b>
                 </span>
               </a>
-              <a (click)="openModal(place.id)" class="card-footer-item has-text-danger-dark">
+              <a (click)="openDeleteModal(place.id)" class="card-footer-item has-text-danger-dark">
                 <span class="icon">
                   <i class="fas fa-trash"></i>
                 </span>
-              </a>                                
+              </a>
             </footer>
             <div id="modal-{{ place.id }}" class="modal">
               <div class="modal-background"></div>
               <div class="modal-card">
                 <header class="modal-card-head">
-                  <p class="modal-card-title">Confirma a exclusão do estabelecimento ?</p>
+                  <p class="modal-card-title">Excluir estabelecimento?</p>
                   <button (click)="closeModal(place.id)" class="delete" aria-label="close"></button>
                 </header>
                 <section class="modal-card-body">
-                  {{ place.title }}
+                  <p>Deseja mesmo excluir o seguinte estabelecimento?</p>
+                  <p><b>{{ place.title }}</b></p>
                 </section>
                 <footer class="modal-card-foot">
-                  <button (click)="deletePlace(place.id, index)" class="button is-success">Sim</button>
-                  <button (click)="closeModal(place.id)" class="button">Não</button>
+                  <button (click)="closeModal(place.id)" class="button">Voltar</button>
+                  <button (click)="deletePlace(place.id, index)" class="button is-danger">Sim, excluir</button>
                 </footer>
               </div>
-            </div>          
+            </div>
           </div>
         </div>
       </div>
@@ -305,5 +301,5 @@
       </div>
     </div>
   </div>
-    
+
 </section>
