--- a/src/app/pages/places/places.component.html
+++ b/src/app/pages/places/places.component.html
@@ -53,11 +53,7 @@
           <div class="field">
             <label for="state">Estado</label>
             <div class="control select">
-              <select (change)="getCities()"
-                [(ngModel)]="filter.state"
-                class="input"
-                name="state"
-                id="state">
+              <select (change)="getCities()" [(ngModel)]="filter.state" class="input" name="state" id="state">
                 <option value="">Selecione...</option>
                 <option value="AC">Acre</option>
                 <option value="AL">Alagoas</option>
@@ -121,67 +117,88 @@
     <div *ngIf="places.length > 0">
       <div class="columns is-multiline">
         <div class="column is-4" *ngFor="let place of places">
-          <a [routerLink]="'/estabelecimentos/' + place.id">
-            <div class="card place-card">
-              <div class="card-image has-background-primary" [style]="{ 'background-image': place.pictureUrl ? 'url(' + place.pictureUrl + ')' : '' }"></div>
-              <div class="card-content">
-                <h3 class="title is-4">{{ place.title }}</h3>
-                <p class="subtitle is-6 mb-0">{{ place.type }}</p>
-                <bar-rating [(rate)]="place.rating" theme="stars" [readOnly]="false" (rateChange)="redirectUser(place.id, $event)"></bar-rating>
-                <div class="tags">
-                  <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'estacionamento')">
-                    <span class="icon">
-                      <i class="fas fa-car"></i>
-                    </span>
-                    <span>estacionamento</span>
+          <div class="card place-card">
+            <div class="card-image has-background-primary"
+              [style]="{ 'background-image': place.pictureUrl ? 'url(' + place.pictureUrl + ')' : '' }"></div>
+            <div class="card-content">
+              <h3 class="title is-4">{{ place.title }}</h3>
+              <p class="subtitle is-6 mb-0">{{ place.type }}</p>
+              <bar-rating [(rate)]="place.rating" theme="stars" [readOnly]="false"
+                (rateChange)="redirectUser(place.id, $event)"></bar-rating>
+              <div class="tags">
+                <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'estacionamento')">
+                  <span class="icon">
+                    <i class="fas fa-car"></i>
                   </span>
-                  <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'entrada_facilitada')">
-                    <span class="icon">
-                      <i class="fas fa-door-open"></i>
-                    </span>
-                    <span>entrada facilitada</span>
+                  <span>estacionamento</span>
+                </span>
+                <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'entrada_facilitada')">
+                  <span class="icon">
+                    <i class="fas fa-door-open"></i>
                   </span>
-                  <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'circulacao_interna')">
-                    <span class="icon">
-                      <i class="fas fa-walking"></i>
-                    </span>
-                    <span>circulação interna</span>
+                  <span>entrada facilitada</span>
+                </span>
+                <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'circulacao_interna')">
+                  <span class="icon">
+                    <i class="fas fa-walking"></i>
                   </span>
-                  <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'banheiro_acessivel')">
-                    <span class="icon">
-                      <i class="fas fa-toilet"></i>
-                    </span>
-                    <span>banheiro acessível</span>
+                  <span>circulação interna</span>
+                </span>
+                <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'banheiro_acessivel')">
+                  <span class="icon">
+                    <i class="fas fa-toilet"></i>
                   </span>
-                  <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'sinalizacao')">
-                    <span class="icon">
-                      <i class="fas fa-map-signs"></i>
-                    </span>
-                    <span>sinalização</span>
+                  <span>banheiro acessível</span>
+                </span>
+                <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'sinalizacao')">
+                  <span class="icon">
+                    <i class="fas fa-map-signs"></i>
                   </span>
-                  <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'site_acessivel')">
-                    <span class="icon">
-                      <i class="fas fa-desktop"></i>
-                    </span>
-                    <span>site acessível</span>
+                  <span>sinalização</span>
+                </span>
+                <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'site_acessivel')">
+                  <span class="icon">
+                    <i class="fas fa-desktop"></i>
                   </span>
-                  <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'pap')">
-                    <span class="icon">
-                      <i class="fas fa-smile-beam"></i>
-                    </span>
-                    <span>posicionamento atitudinal positivo</span>
+                  <span>site acessível</span>
+                </span>
+                <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'pap')">
+                  <span class="icon">
+                    <i class="fas fa-smile-beam"></i>
                   </span>
-                </div>
-                <address *ngIf="place.address">
-                  CEP {{ place.address.zipCode }}<br>
-                  {{ place.address.city }}, {{ place.address.state }}<br>
-                  Bairro {{ place.address.neighborhood }}<br>
-                  Descrição: {{place.address.descricao}}<br>
-                  {{ place.address.street }} {{ place.address.number }}{{ place.address.complement ? ', ' + place.address.complement : '' }}
-                </address>
+                  <span>posicionamento atitudinal positivo</span>
+                </span>
               </div>
+              <address *ngIf="place.address">
+                CEP {{ place.address.zipCode }}<br>
+                {{ place.address.city }}, {{ place.address.state }}<br>
+                Bairro {{ place.address.neighborhood }}<br>
+                Descrição: {{place.address.descricao}}<br>
+                {{ place.address.street }} {{ place.address.number }}{{ place.address.complement ? ', ' +
+                place.address.complement : '' }}
+              </address>
             </div>
-          </a>
+            <footer class="card-footer">
+              <a [routerLink]="'/estabelecimentos/' + place.id" class="card-footer-item"
+                [attr.aria-labelledby]="'Ver ' + place.title">
+                <span class="icon" aria-hidden="true">
+                  <i class="fas fa-eye"></i>
+                </span>
+                <span>
+                  <b>Ver</b>
+                </span>
+              </a>
+              <a [routerLink]="'/estabelecimentos/' + place.id + '/avaliar'" class="card-footer-item"
+                [attr.aria-labelledby]="'Avaliar ' + place.title">
+                <span class="icon" aria-hidden="true">
+                  <i class="fas fa-star"></i>
+                </span>
+                <span>
+                  <b>Avaliar</b>
+                </span>
+              </a>
+            </footer>
+          </div>
         </div>
       </div>
     </div>
@@ -225,8 +242,8 @@
         <div class="field">
           <label for="perPage">Estabelecimentos por página</label>
           <div class="control select">
-            <select (change)="getPlacesPerPage()" [(ngModel)]="this.pagination.limit" class="input" name="perPage" [disabled]="pagination.total == 0"
-              id="perPage">
+            <select (change)="getPlacesPerPage()" [(ngModel)]="this.pagination.limit" class="input" name="perPage"
+              [disabled]="pagination.total == 0" id="perPage">
               <option value="9">9</option>
               <option value="18">18</option>
               <option value="36">36</option>
