fix: typo in ratings modal

--- a/src/app/pages/admin/admin-ratings/admin-ratings.component.html
+++ b/src/app/pages/admin/admin-ratings/admin-ratings.component.html
@@ -112,7 +112,7 @@
                   <button (click)="closeModal(rating._id)" class="delete" aria-label="close"></button>
                 </header>
                 <section class="modal-card-body">
-                  <p>Deseja mesmo excluir o seguinte estabelecimento?</p>
+                  <p>Deseja mesmo excluir a seguinte avaliação?</p>
                   <p><b>{{ rating.title }}</b></p>
                 </section>
                 <footer class="modal-card-foot">
