--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,7 @@
   <div class="container">
     <p>Apoiadores:</p>
     <div class="supporters" tabindex="-1">
-      <img src="../assets/img/onu.png" alt="ONU">
+      <img src="../assets/img/onu.svg" alt="ONU">
       <img src="../assets/img/zaffari-logo.jpg" alt="Zaffari">
       <img src="../assets/img/pucrs.svg" alt="PUCRS">
     </div>
