fix: change descricao to description

--- a/src/app/pages/new-place/new-place.component.html
+++ b/src/app/pages/new-place/new-place.component.html
@@ -80,9 +80,9 @@
               </div>
               <div class="column is-12">
                 <div class="field">
-                  <label for="descricao">Descrição <small>(opcional)</small></label>
+                  <label for="description">Descrição <small>(opcional)</small></label>
                   <div class="control">
-                    <input class="input" name="descricao" id="descricao" [(ngModel)]="place.address.descricao">
+                    <input class="input" name="description" id="description" [(ngModel)]="place.address.description">
                   </div>
                 </div>
               </div>
