--- a/src/app/pages/place/place.component.html
+++ b/src/app/pages/place/place.component.html
@@ -70,7 +70,7 @@
               CEP {{ place.address.zipCode }}<br>
               {{ place.address.city }}, {{ place.address.state }}<br>
               Bairro {{ place.address.neighborhood }}<br>
-              Descrição: {{place.address.descricao}} <br>
+              Descrição: {{place.address.description}} <br>
               {{ place.address.street }} {{ place.address.number }}{{ place.address.complement ? ', ' +
               place.address.complement : '' }}
             </address>
