--- a/src/app/pages/new-rating/new-rating.component.html
+++ b/src/app/pages/new-rating/new-rating.component.html
@@ -123,9 +123,18 @@
             <div class="column is-4">
               <div class="field">
                 <label>
-                  <input type="checkbox" name="pap" value="Posicionamento atitudinal positivo"
-                    [(ngModel)]="accessibilities.pap" required>
-                  Posicionamento atitudinal positivo
+                  <input type="checkbox" name="pap" value="Atendimento receptivo" [(ngModel)]="accessibilities.pap"
+                    required>
+                  Atendimento receptivo
+                </label>
+              </div>
+            </div>
+            <div class="column is-4">
+              <div class="field">
+                <label>
+                  <input type="checkbox" name="pap" value="Inclusivo com colaboradores"
+                    [(ngModel)]="accessibilities.inclusivo_colaboradores" required>
+                  Inclusivo com colaboradores
                 </label>
               </div>
             </div>
