--- a/src/app/pages/place/place.component.html
+++ b/src/app/pages/place/place.component.html
@@ -77,7 +77,13 @@
                 <span class="icon">
                   <i class="fas fa-smile-beam"></i>
                 </span>
-                <span>posicionamento atitudinal positivo</span>
+                <span>atendimento receptivo</span>
+              </span>
+              <span class="tag" *ngIf="checkIfAccessibiltyExists('inclusivo_colaboradores')">
+                <span class="icon">
+                  <i class="fas fa-smile-beam"></i>
+                </span>
+                <span>inclusivo com colaboradores</span>
               </span>
             </div>
           </div>
