fix: change default pagination limit, add place link

--- a/src/app/pages/admin/admin-places/admin-places.component.html
+++ b/src/app/pages/admin/admin-places/admin-places.component.html
@@ -7,7 +7,7 @@
           <p class="subtitle">Aqui você pode ver, aprovar e excluir estabelecimentos</p>
         </div>
         <div class="column has-text-right">
-          <a [routerLink]="'/adicionar'" class="button is-light">
+          <a [routerLink]="'/estabelecimentos/adicionar'" class="button is-light">
             <span class="icon">
               <i class="fas fa-plus"></i>
             </span>
