feat: change 'acessivel' to 'design inclusivo'

--- a/src/app/pages/new-place/new-place.component.html
+++ b/src/app/pages/new-place/new-place.component.html
@@ -109,7 +109,7 @@
             </div>
           </div>
           <div class="column is-4">
-            <h2 class="title">Acessibilidades</h2>
+            <h2 class="title">Itens de Design Inclusivo</h2>
             <div class="field">
               <label class="checkbox">
                 <input type="checkbox" [(ngModel)]="accessibilities.banheiro_acessivel" name="banheiro_acessivel">
