--- a/src/app/pages/new-rating/new-rating.component.html
+++ b/src/app/pages/new-rating/new-rating.component.html
@@ -26,7 +26,7 @@
             <div class="column is-3">
               <div class="field">
                 <label for="rating">
-                  Acessibilidade
+                  Design Inclusivo
                   <bar-rating name="rating" theme="stars" [(ngModel)]="rating.rating" [max]="5" required
                     class="input-stars"></bar-rating>
                 </label>
@@ -64,7 +64,7 @@
               </div>
             </div>
             <div class="column is-12">
-              <h3 class="title is-4">Acessibilidades</h3>
+              <h3 class="title is-4">Itens de Design Inclusivo</h3>
             </div>
             <div class="column is-3">
               <div class="field">
