--- a/src/app/pages/places/places.component.html
+++ b/src/app/pages/places/places.component.html
@@ -1,7 +1,7 @@
 <section class="hero is-primary">
   <div class="hero-body">
     <div class="container">
-      <h1 class="title is-3">Encontre estabelecimentos acessíveis</h1>
+      <h1 class="title is-3">Encontre estabelecimentos com design inclusivo</h1>
     </div>
   </div>
 </section>
