feat: remove puc logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,7 +79,7 @@
     <p>Apoiadores:</p>
     <div class="supporters" tabindex="-1">
       <img src="../assets/img/onu.svg" alt="ONU">
-      <img src="../assets/img/pucrs.svg" alt="PUCRS">
+      <!-- <img src="../assets/img/pucrs.svg" alt="PUCRS"> -->
     </div>
     <p>
       OSC Conexão Solidária - CNPJ 24.236.775/0001-29
